# PigeonComparison

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cufe/wby/pigeoncomparison/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: compare.param
app/src/main/cpp/: CMakeLists.txt  compare.cpp  model_jni.cpp  yolo-fastestv2.cpp
app/src/main/cpp/include/: compare.h  yolo-fastestv2.h
app/src/main/cpp/ncnn-20220721-android-vulkan/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake
app/src/main/java/cufe/wby/pigeoncomparison/: BGM.java  CamActivity.java  CmpActivity.java  MainActivity.java
app/src/main/java/cufe/wby/pigeoncomparison/model/: Model.java
app/src/main/java/cufe/wby/pigeoncomparison/view/: CamView.java
app/src/main/res/drawable-v24/: camera_button.xml
app/src/main/res/layout/: activity_main.xml  cam_view.xml  cmp_view.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
